# iPhotoSizer

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/superpowers/plans/: 2026-03-15-source-of-truth-fixes.md  2026-03-15-web-ui.md
docs/superpowers/specs/: 2026-03-15-web-ui-design.md
src/iphoto_sizer/: __init__.py  __main__.py  cli.py  core.py  models.py  writers.py
src/iphoto_sizer/web/: __init__.py  routes.py
src/iphoto_sizer/web/static/: app.js  style.css
src/iphoto_sizer/web/templates/: index.html
tests/: conftest.py  test_cli.py  test_core.py  test_models.py  test_terminal_detection.py  test_writers.py
tests/test_web/: test_routes.py
